mdapi/objects/StcZoneRule__c.object
<CustomObject>
    <fields>
        <fullName>Account_User_Types__c</fullName>
        <inlineHelpText>When processing an Account, which User Types apply.  Leave blank to allow any.</inlineHelpText>
        <label>Account User Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Both MSP and VAR</fullName>
                </value>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>Direct Market Reseller (DMR)</fullName>
                </value>
                <value>
                    <fullName>Distribution Partner</fullName>
                </value>
                <value>
                    <fullName>Distribution Partner Reseller</fullName>
                </value>
                <value>
                    <fullName>Home User</fullName>
                </value>
                <value>
                    <fullName>International Master Distributor</fullName>
                </value>
                <value>
                    <fullName>Managed Service Provider (MSP)</fullName>
                </value>
                <value>
                    <fullName>Original Equipment Manufacturer (OEM)</fullName>
                </value>
                <value>
                    <fullName>Press / Media Evaluator</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Trial User</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller (VAR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this Rule be applied</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <inlineHelpText>Comma separated list of countries</inlineHelpText>
        <label>Countries</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>High_Potential__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Account for High Potential, Gold or Platinum only?</inlineHelpText>
        <label>High Potential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_User_Types__c</fullName>
        <inlineHelpText>Select the User Types which apply to this Rule when processing a Lead.  Leave empty if any User Type is allowed.</inlineHelpText>
        <label>Lead User Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Both MSP and VAR</fullName>
                </value>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>Direct Market Reseller (DMR)</fullName>
                </value>
                <value>
                    <fullName>Distribution Partner</fullName>
                </value>
                <value>
                    <fullName>Distribution Partner Reseller</fullName>
                </value>
                <value>
                    <fullName>Home User</fullName>
                </value>
                <value>
                    <fullName>International Master Distributor</fullName>
                </value>
                <value>
                    <fullName>Original Equipment Manufacturer (OEM)</fullName>
                </value>
                <value>
                    <fullName>Managed Service Provider (MSP)</fullName>
                </value>
                <value>
                    <fullName>Press / Media Evaluator</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Trial User</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller (VAR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>1000</defaultValue>
        <inlineHelpText>Order in which this Rule is applied</inlineHelpText>
        <label>Order</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Codes__c</fullName>
        <inlineHelpText>Commas separated list of Postal Codes or single Function</inlineHelpText>
        <label>Postal Codes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <inlineHelpText>Comma separated list of states</inlineHelpText>
        <label>States</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StcZone__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>StcZone</label>
        <referenceTo>StcZone__c</referenceTo>
        <relationshipLabel>StcZoneRules</relationshipLabel>
        <relationshipName>StcZoneRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Works_On__c</fullName>
        <defaultValue>&quot;Both Leads and Accounts&quot;</defaultValue>
        <inlineHelpText>Does this rule apply to leads, accounts or both?</inlineHelpText>
        <label>Works On</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both Leads and Accounts</fullName>
                </value>
                <value>
                    <fullName>Accounts Only</fullName>
                </value>
                <value>
                    <fullName>Leads Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>StcZoneRule</label>
    <listViews>
        <fullName>All_Zone_Rules</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>StcZone__c</columns>
        <columns>Works_On__c</columns>
        <columns>Account_User_Types__c</columns>
        <columns>Lead_User_Types__c</columns>
        <columns>High_Potential__c</columns>
        <columns>Countries__c</columns>
        <columns>States__c</columns>
        <columns>Postal_Codes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Zone Rules</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>StcZoneRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StcZoneRules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>